--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,30 @@
-@keyframes blinker {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
+@keyframes tomberRebondir {
+    0% {
+        transform: translateY(-100%);
+        animation-timing-function: ease-in;
+    }
+    70% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
+    80% {
+        transform: translateY(-15%);
+        animation-timing-function: ease-in;
+    }
+    90% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
+    95% {
+        transform: translateY(-7%);
+        animation-timing-function: ease-in;
+    }
+    100% {
+        transform: translateY(0);
+        animation-timing-function: ease-out;
+    }
 }
 
-.blink img {
-    animation: blinker 1s infinite;
+.rebond img {
+    animation: tomberRebondir 2s ease-in-out;
 }
